--- a/forindex.css
+++ b/forindex.css
@@ -1,4 +1,13 @@
 
 .container2{
-    margin-top: 3em;
+    margin-top: 4em;
 }
+
+@media (max-width: 830px) and (min-width: 500px) {
+    .container2{
+        margin-top: 5em;
+    }
+}
+
+
+
