--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3247,6 +3247,128 @@ textarea.form-control-lg {
   border-color: #212529;
 }
 
+
+.btn-my1 {
+  color: #fff;
+  background-color: #49E686;
+  border-color: #49E686;
+}
+.btn-my1:hover {
+  color: #fff;
+  background-color: #1fe86d;
+  border-color: #1fe86d;
+}
+.btn-check:focus + .btn-my1, .btn-my1:focus {
+  color: #fff;
+  background-color: #49E686;
+  border-color: #49E686;
+  box-shadow: 0 0 0 0.25rem rgba(73, 230, 134, 0.5);
+}
+.btn-check:checked + .btn-my1, .btn-check:active + .btn-my1, .btn-my1:active, .btn-my1.active, .show > .btn-my1.dropdown-toggle {
+  color: #fff;
+  background-color: #49E686;
+  border-color: #49E686;
+}
+.btn-check:checked + .btn-my1:focus, .btn-check:active + .btn-my1:focus, .btn-my1:active:focus, .btn-my1.active:focus, .show > .btn-my1.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem rgba(73, 230, 134, 0.5);
+}
+.btn-my1:disabled, .btn-my1.disabled {
+  color: #fff;
+  background-color: #49E686;
+  border-color: #49E686;
+}
+
+
+
+.btn-my2 {
+  color: #fff;
+  background-color: #E6706A;
+  border-color: #E6706A;
+}
+.btn-my2:hover {
+  color: #fff;
+  background-color: #E65A53;
+  border-color: #E65A53;
+}
+.btn-check:focus + .btn-my2, .btn-my2:focus {
+  color: #fff;
+  background-color: #E6706A;
+  border-color: #E6706A;
+  box-shadow: 0 0 0 0.25rem rgba(230, 112, 106, 0.5);
+}
+.btn-check:checked + .btn-my2, .btn-check:active + .btn-my2, .btn-my2:active, .btn-my2.active, .show > .btn-my2.dropdown-toggle {
+  color: #fff;
+  background-color: #E6706A;
+  border-color: #E6706A;
+}
+.btn-check:checked + .btn-my2:focus, .btn-check:active + .btn-my2:focus, .btn-my2:active:focus, .btn-my2.active:focus, .show > .btn-my2.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem rgba(230, 112, 106, 0.5);
+}
+.btn-my2:disabled, .btn-my2.disabled {
+  color: #fff;
+  background-color: #E6706A;
+  border-color: #E6706A;
+}
+
+
+.btn-outline-my1 {
+  color: #49E686;
+  border-color: #49E686;
+}
+.btn-outline-my1:hover {
+  color: #fff;
+  background-color: #49E686;
+  border-color: #49E686;
+}
+.btn-check:focus + .btn-outline-my1, .btn-outline-my1:focus {
+  box-shadow: 0 0 0 0.25rem rgba(73, 230, 134, 0.5);
+}
+.btn-check:checked + .btn-outline-my1, .btn-check:active + .btn-outline-my1, .btn-outline-my1:active, .btn-outline-my1.active, .btn-outline-my1.dropdown-toggle.show {
+  color: #fff;
+  background-color: #49E686;
+  border-color: #49E686;
+}
+.btn-check:checked + .btn-outline-my1:focus, .btn-check:active + .btn-outline-my1:focus, .btn-outline-my1:active:focus, .btn-outline-my1.active:focus, .btn-outline-my1.dropdown-toggle.show:focus {
+  box-shadow: 0 0 0 0.25rem rgba(73, 230, 134, 0.5);
+}
+.btn-outline-my1:disabled, .btn-outline-my1.disabled {
+  color: #49E686;
+  background-color: transparent;
+}
+
+
+.btn-outline-my2 {
+  color: #E6706A;
+  border-color: #E6706A;
+}
+.btn-outline-my2:hover {
+  color: #fff;
+  background-color: #E6706A;
+  border-color: #E6706A;
+}
+.btn-check:focus + .btn-outline-my2, .btn-outline-my2:focus {
+  box-shadow: 0 0 0 0.25rem rgba(230, 112, 106, 0.5);
+}
+.btn-check:checked + .btn-outline-my2, .btn-check:active + .btn-outline-my2, .btn-outline-my2:active, .btn-outline-my2.active, .btn-outline-my2.dropdown-toggle.show {
+  color: #fff;
+  background-color: #E6706A;
+  border-color: #E6706A;
+}
+.btn-check:checked + .btn-outline-my2:focus, .btn-check:active + .btn-outline-my2:focus, .btn-outline-my2:active:focus, .btn-outline-my2.active:focus, .btn-outline-my2.dropdown-toggle.show:focus {
+  box-shadow: 0 0 0 0.25rem rgba(230, 112, 106, 0.5);
+}
+.btn-outline-my2:disabled, .btn-outline-my2.disabled {
+  color: #E6706A;
+  background-color: transparent;
+}
+
+
+
+
+
+
+
+
 .btn-outline-primary {
   color: #0d6efd;
   border-color: #0d6efd;
@@ -7715,6 +7837,11 @@ textarea.form-control-lg {
 .text-warning {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-warning-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-my1 {
+  --bs-text-opacity: 1;
+  color: #49E686 !important;
 }
 
 .text-danger {
