--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3250,8 +3250,8 @@ textarea.form-control-lg {
 
 .btn-my1 {
   color: #fff;
-  background-color: #479AE6;
-  border-color: #479AE6;
+  background-color: #3772FF;
+  border-color: #3772FF;
 }
 .btn-my1:hover {
   color: #fff;
@@ -3260,105 +3260,105 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn-my1, .btn-my1:focus {
   color: #fff;
-  background-color: #479AE6;
-  border-color: #479AE6;
+  background-color: #3772FF;
+  border-color: #3772FF;
   box-shadow: 0 0 0 0.25rem rgba(71, 154, 230, 0.5);
 }
 .btn-check:checked + .btn-my1, .btn-check:active + .btn-my1, .btn-my1:active, .btn-my1.active, .show > .btn-my1.dropdown-toggle {
   color: #fff;
-  background-color: #479AE6;
-  border-color: #479AE6;
+  background-color: #3772FF;
+  border-color: #3772FF;
 }
 .btn-check:checked + .btn-my1:focus, .btn-check:active + .btn-my1:focus, .btn-my1:active:focus, .btn-my1.active:focus, .show > .btn-my1.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(71, 154, 230, 0.5);
 }
 .btn-my1:disabled, .btn-my1.disabled {
   color: #fff;
-  background-color: #479AE6;
-  border-color: #479AE6;
+  background-color: #3772FF;
+  border-color: #3772FF;
 }
 
 
 
 .btn-my2 {
   color: #fff;
-  background-color: #E6655F;
-  border-color: #E6655F;
+  background-color: #DF2935;
+  border-color: #DF2935;
 }
 .btn-my2:hover {
   color: #fff;
-  background-color: #99352F;
-  border-color: #99352F;
+  background-color: #e00916;
+  border-color: #e00916;
 }
 .btn-check:focus + .btn-my2, .btn-my2:focus {
   color: #fff;
-  background-color: #E6655F;
-  border-color: #E6655F;
+  background-color: #DF2935;
+  border-color: #DF2935;
   box-shadow: 0 0 0 0.25rem rgba(230, 101, 95, 0.5);
 }
 .btn-check:checked + .btn-my2, .btn-check:active + .btn-my2, .btn-my2:active, .btn-my2.active, .show > .btn-my2.dropdown-toggle {
   color: #fff;
-  background-color: #E6655F;
-  border-color: #E6655F;
+  background-color: #DF2935;
+  border-color: #DF2935;
 }
 .btn-check:checked + .btn-my2:focus, .btn-check:active + .btn-my2:focus, .btn-my2:active:focus, .btn-my2.active:focus, .show > .btn-my2.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(230, 101, 95, 0.5);
 }
 .btn-my2:disabled, .btn-my2.disabled {
   color: #fff;
-  background-color: #E6655F;
-  border-color: #E6655F;
+  background-color: #DF2935;
+  border-color: #DF2935;
 }
 
 
 .btn-outline-my1 {
-  color: #479AE6;
-  border-color: #479AE6;
+  color: #3772FF;
+  border-color: #3772FF;
 }
 .btn-outline-my1:hover {
   color: #fff;
-  background-color: #479AE6;
-  border-color: #479AE6;
+  background-color: #3772FF;
+  border-color: #3772FF;
 }
 .btn-check:focus + .btn-outline-my1, .btn-outline-my1:focus {
   box-shadow: 0 0 0 0.25rem rgba(71, 154, 230, 0.5);
 }
 .btn-check:checked + .btn-outline-my1, .btn-check:active + .btn-outline-my1, .btn-outline-my1:active, .btn-outline-my1.active, .btn-outline-my1.dropdown-toggle.show {
   color: #fff;
-  background-color: #479AE6;
-  border-color: #479AE6;
+  background-color: #3772FF;
+  border-color: #3772FF;
 }
 .btn-check:checked + .btn-outline-my1:focus, .btn-check:active + .btn-outline-my1:focus, .btn-outline-my1:active:focus, .btn-outline-my1.active:focus, .btn-outline-my1.dropdown-toggle.show:focus {
   box-shadow: 0 0 0 0.25rem rgba(71, 154, 230, 0.5);
 }
 .btn-outline-my1:disabled, .btn-outline-my1.disabled {
-  color: #479AE6;
+  color: #3772FF;
   background-color: transparent;
 }
 
 
 .btn-outline-my2 {
-  color:#E6655F;
-  border-color: #E6655F;
+  color:#DF2935;
+  border-color: #DF2935;
 }
 .btn-outline-my2:hover {
   color: #fff;
-  background-color: #E6655F;
-  border-color: #E6655F;
+  background-color: #DF2935;
+  border-color: #DF2935;
 }
 .btn-check:focus + .btn-outline-my2, .btn-outline-my2:focus {
   box-shadow: 0 0 0 0.25rem rgba(230, 101, 95, 0.5);
 }
 .btn-check:checked + .btn-outline-my2, .btn-check:active + .btn-outline-my2, .btn-outline-my2:active, .btn-outline-my2.active, .btn-outline-my2.dropdown-toggle.show {
   color: #fff;
-  background-color: #E6655F;
-  border-color: #E6655F;
+  background-color: #DF2935;
+  border-color: #DF2935;
 }
 .btn-check:checked + .btn-outline-my2:focus, .btn-check:active + .btn-outline-my2:focus, .btn-outline-my2:active:focus, .btn-outline-my2.active:focus, .btn-outline-my2.dropdown-toggle.show:focus {
   box-shadow: 0 0 0 0.25rem rgba(230, 101, 95, 0.5);
 }
 .btn-outline-my2:disabled, .btn-outline-my2.disabled {
-  color: #E6655F;
+  color: #DF2935;
   background-color: transparent;
 }
 
@@ -7924,15 +7924,19 @@ textarea.form-control-lg {
 }
 .bg-main {
   --bs-bg-opacity: 1;
-  background-color: #DCE66A !important;
+  background-color: #FDCA40 !important;
+}
+.bg-body2 {
+  --bs-bg-opacity: 1;
+  background-color: #E6E8E6 !important;
 }
 .bg-my1 {
   --bs-bg-opacity: 1;
-  background-color: #479AE6 !important;
+  background-color: #3772FF !important;
 }
 .bg-my2 {
   --bs-bg-opacity: 1;
-  background-color: #E6655F !important;
+  background-color: #DF2935 !important;
 }
 
 .bg-secondary {
